# devblog-next-rs

./: .eslintrc.json  .gitignore  .gitmodules  README.md  contentlayer.config.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
api/: Cargo.toml  report.json  rustfmt.toml
api/.cargo/: config.toml
api/src/: config.rs  main.rs
api/src/di/: mod.rs
api/src/grpc/: authentication.rs  base.rs  discussion.rs  mod.rs  post.rs
api/src/grpc/middlewares/: mod.rs
api/src/repository/: author.rs  discussion.rs  interactive.rs  mod.rs  post.rs
api/src/repository/surrealdb/: author.rs  discussion.rs  interaction.rs  mod.rs  post.rs
api/src/services/: mod.rs
api/src/services/authentication/: signin.rs  signup.rs
api/src/services/discussion/: get_discussion.rs  mod.rs  new_discussion.rs
api/src/services/interaction/: like.rs
api/src/services/post/: create_post.rs  get_post.rs  interact.rs  migrate.rs  mod.rs
api/src/services/user/: mod.rs
api/src/utils/: wrapper.rs
content/deploy-flutter-web/: index.mdx
public/3d-models/floor/: geometries.glb
public/3d-models/low-vertex/: geometries.glb
public/3d-models/macone/: geometries.glb  geometries2.glb  simple-computer.glb
public/3d-models/the-scene-1/: geometries-computer-4.glb  geometries.glb  text-geometries.glb
public/fonts/: graduate.typeface.json  roboto_mono.typeface.json
public/images/: warehouse-environment.hdr
scripts/: docker.sh  sync-submodules.sh
scripts/dev/: tmux-quick-start.sh
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/blog-list/: index.tsx
src/app/blogs/: blog-item.tsx  list.tsx
src/app/blogs/deploy-flutter-web/: item.tsx
src/app/components/: basic-interaction.tsx  canvas.tsx  electrical-effect.tsx  footer.tsx  loading-overlay.tsx  mesh-holder.tsx  navigation-bar.tsx  new-sletter-subscription.tsx  reponsive.tsx  ribbon.tsx  running-text.tsx  tivi.tsx
src/app/components/discussion/: index.tsx  input.tsx  item.tsx
src/app/contexts/: 3d.ts  MousePosition.ts
src/app/footer/: index.tsx
src/app/glsl/: index.ts
src/app/glsl/background-frame/: fragment.glsl  vertex.glsl
src/app/glsl/color-background/: fragment.glsl
src/app/glsl/electrical-effect/: fragment.glsl
src/app/glsl/gradient-background/: fragment.glsl  vertex.glsl
src/app/glsl/includes/: ambientLight.glsl  directionalLight.glsl  simplexNoise3d.glsl
src/app/glsl/loading/: fragment.glsl
src/app/glsl/macone/: fragment.glsl
src/app/glsl/macone-lcd/: fragment.glsl  vertex.glsl
src/app/glsl/pointer/: fragment.glsl  vertex.glsl
src/app/home/: background.tsx  content.tsx  index.tsx
src/app/hooks/: index.ts  use-glitch-frame.ts  use-glitch.ts  use-visibility.ts
src/app/icons/: instagram.tsx
src/app/models/: MousePosition.ts  computer.tsx  keyboard.tsx  low-vertex.tsx  macone.tsx  transform.tsx
src/app/pages/: index.tsx
src/app/posts/: background.tsx  blog-list-background.tsx  footer.tsx  list.tsx  mdx.tsx  post-item.tsx  table-of-content.tsx  title.tsx
web/: contentlayer.config.js  contentlayer.config.ts  eslint.config.mjs  next.config.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/build-time/: jwt.ts
web/content/10-steps-deploy-any-app-with-github-action/: index.mdx
web/content/2-things-not-for-javascript/: index.mdx
web/content/5-things-not-for-javascript/: index.mdx
web/content/deploy-flutter-web/: index.mdx
web/content/implement-resource-pool-in-rust/: index.mdx
web/content/proto-and-surrealdb/: index.mdx
web/content/sample/: index.mdx
web/content/surrealdb/: index.mdx
web/content/surrealdb-after-6-month/: index.mdx
web/public/dotlottie/: resource-pool_-_full-flow.lottie  resource-pool_-_simple-flow.lottie
web/public/fonts/: graduate.typeface.json  inter.typeface.json
web/public/images/: simple.hdr
web/src/app/: globals.css  layout.tsx  page.tsx
(+116 files in other folders)
