[package]
name = "devblog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.28.2", features = ["full"]}
schema = {path = "../schema/rust"}
tonic = "0.11.0"
prost = "0.12.6"
lazy_static = "1.5.0"
surrealdb = "1.5.3"
pretty_env_logger = "0.5.0"
log = "0.4.21"
tonic-web = "0.11.0"
tower-http = {version="0.4.4", features = ["cors"]}
once_cell = "1.19.0"
surreal_devl = "1.0.5"
surreal_derive_plus = "1.0.11"
surrealdb_id = "0.1.2"
