[package]
name = "devblog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = "0.9.3"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-service = "0.45.0"
shuttle-static-folder = "0.28.0"
sync_wrapper = "1.0.1"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
